@@ -1,4 +1,6 @@
-#include <kernaux/io.h>
+#define KERNAUX_ACCESS_PROTECTED
+
+#include <kernaux/generic/file.h>
 #include <kernaux/printf.h>
 
 #include <assert.h>
@@ -8,24 +10,26 @@
 
 #define BUFFER_SIZE 1024
 
-static const char *const data = "foobar";
-
 static char buffer[BUFFER_SIZE];
 static size_t buffer_index = 0;
 
-static void my_putchar(const char chr, void *arg)
+static int my_putc(__attribute__((unused)) void *const file, unsigned char c)
 {
-    assert(arg == data);
     if (buffer_index >= BUFFER_SIZE) abort();
-    buffer[buffer_index++] = chr;
+    buffer[buffer_index++] = c;
+    return 1;
 }
+
+static const struct KernAux_File file = {
+    .putc = my_putc,
+    .puts = NULL,
+    .write = NULL,
+};
 
 void example_main()
 {
-    struct KernAux_OldFile file = KernAux_OldFile_create(my_putchar);
     const int result = kernaux_fprintf(
         &file,
-        (char*)data,
         "Hello, %s! Session ID: %u.",
         "Alex",
         123
