@@ -15,7 +15,7 @@ typedef int (*KernAux_File_Putc) (void *file, unsigned char c);
 typedef int (*KernAux_File_Puts) (void *file, const char *s);
 typedef int (*KernAux_File_Write)(void *file, const void *buffer, size_t count);
 
-typedef struct KernAux_File {
+typedef const struct KernAux_File {
     KernAux_File_Putc  KERNAUX_PROTECTED_FIELD(putc);
     KernAux_File_Puts  KERNAUX_PROTECTED_FIELD(puts);
     KernAux_File_Write KERNAUX_PROTECTED_FIELD(write);
