@@ -5,21 +5,20 @@
 extern "C" {
 #endif
 
+#include <kernaux/generic/file.h>
+
 #include <stdarg.h>
 #include <stddef.h>
-
-@comment_line_io@#include <kernaux/io.h>
 
 /**
  * Tiny [v]fprintf implementation
  * \param file An output file
- * \param arg An argument pointer for user data passed to output function
  * \param format A string that specifies the format of the output
  * \param va A value identifying a variable arguments list
  * \return The number of characters that are sent to the output function, not counting the terminating null character
  */
-@comment_line_io@int  kernaux_fprintf(KernAux_OldFile file, void* arg, const char* format, ...);
-@comment_line_io@int kernaux_vfprintf(KernAux_OldFile file, void* arg, const char* format, va_list va);
+int  kernaux_fprintf(KernAux_File file, const char* format, ...);
+int kernaux_vfprintf(KernAux_File file, const char* format, va_list va);
 
 /**
  * Tiny [v]snprintf implementation
