@@ -4,6 +4,7 @@
 
 #include <kernaux/assert.h>
 #include <kernaux/drivers/console.h>
+#include <kernaux/generic/file.h>
 
 #ifdef ASM_I386
 #include <kernaux/asm/i386.h>
@@ -12,22 +13,20 @@
 #include <kernaux/asm/x86_64.h>
 #endif
 
-#ifdef WITH_IO
-#include <kernaux/io.h>
-#endif
 #ifdef WITH_PRINTF
 #include <kernaux/printf.h>
 #endif
 
 #include <stddef.h>
 
-#if defined(WITH_IO) && defined(WITH_PRINTF)
-static void kernaux_drivers_console_printf_putc(
-    const char c,
-    void *const arg __attribute__((unused))
-) {
-    kernaux_drivers_console_putc(c);
-}
+#ifdef WITH_PRINTF
+static int file_putc(void *file, unsigned char c);
+
+static const struct KernAux_File file = {
+    .putc = file_putc,
+    .puts = NULL,
+    .write = NULL,
+};
 #endif
 
 void kernaux_drivers_console_putc(const char c __attribute__((unused)))
@@ -49,16 +48,14 @@ void kernaux_drivers_console_print(const char *const s)
     }
 }
 
-#if defined(WITH_IO) && defined(WITH_PRINTF)
+#ifdef WITH_PRINTF
 void kernaux_drivers_console_printf(const char *format, ...)
 {
     KERNAUX_ASSERT(format);
 
     va_list va;
     va_start(va, format);
-    struct KernAux_OldFile file =
-        KernAux_OldFile_create(kernaux_drivers_console_printf_putc);
-    kernaux_vfprintf(&file, NULL, format, va);
+    kernaux_vfprintf(&file, format, va);
     va_end(va);
 }
 #endif
@@ -79,3 +76,11 @@ void kernaux_drivers_console_write(const char *const data, const size_t size)
         kernaux_drivers_console_putc(data[i]);
     }
 }
+
+#ifdef WITH_PRINTF
+int file_putc(__attribute__((unused)) void *const file, const unsigned char c)
+{
+    kernaux_drivers_console_putc(c);
+    return 1;
+}
+#endif
