@@ -12,7 +12,7 @@ void *KernAux_Malloc_calloc(KernAux_Malloc malloc, size_t nmemb, size_t size)
     KERNAUX_ASSERT(malloc);
     KERNAUX_ASSERT(malloc->calloc);
 
-    return malloc->calloc(malloc, nmemb, size);
+    return malloc->calloc((void*)malloc, nmemb, size);
 }
 
 void KernAux_Malloc_free(KernAux_Malloc malloc, void *ptr)
@@ -20,7 +20,7 @@ void KernAux_Malloc_free(KernAux_Malloc malloc, void *ptr)
     KERNAUX_ASSERT(malloc);
     KERNAUX_ASSERT(malloc->free);
 
-    malloc->free(malloc, ptr);
+    malloc->free((void*)malloc, ptr);
 }
 
 void *KernAux_Malloc_malloc(KernAux_Malloc malloc, size_t size)
@@ -28,7 +28,7 @@ void *KernAux_Malloc_malloc(KernAux_Malloc malloc, size_t size)
     KERNAUX_ASSERT(malloc);
     KERNAUX_ASSERT(malloc->malloc);
 
-    return malloc->malloc(malloc, size);
+    return malloc->malloc((void*)malloc, size);
 }
 
 void *KernAux_Malloc_realloc(KernAux_Malloc malloc, void *ptr, size_t size)
@@ -36,5 +36,5 @@ void *KernAux_Malloc_realloc(KernAux_Malloc malloc, void *ptr, size_t size)
     KERNAUX_ASSERT(malloc);
     KERNAUX_ASSERT(malloc->realloc);
 
-    return malloc->realloc(malloc, ptr, size);
+    return malloc->realloc((void*)malloc, ptr, size);
 }
