@@ -2,13 +2,13 @@
 #include "config.h"
 #endif
 
+#define KERNAUX_ACCESS_PROTECTED
+
+#include <kernaux/generic/file.h>
 #include <kernaux/printf.h>
 
-#ifdef WITH_IO
-#include <kernaux/io.h>
-#endif
-
 #include <assert.h>
+#include <stddef.h>
 #include <stdio.h>
 #include <stdlib.h>
 #include <string.h>
@@ -18,39 +18,35 @@
 static char buffer[BUFFER_SIZE];
 static size_t buffer_index;
 
-#ifdef WITH_IO
-
-static const char *const data = "foobar";
-
-static void test_putchar(const char chr, void *const arg)
+static int test_putc(__attribute__((unused)) void *const file, unsigned char c)
 {
-    assert(arg == data);
-
     if (buffer_index >= BUFFER_SIZE) {
         printf("Buffer overflow!\n");
         abort();
     }
 
-    buffer[buffer_index++] = chr;
+    buffer[buffer_index++] = c;
+    return 1;
 }
 
-#endif // WITH_IO
+static const struct KernAux_File file = {
+    .putc = test_putc,
+    .puts = NULL,
+    .write = NULL,
+};
 
 static void test(const char *const expected, const char *const format, ...)
 {
     va_list va;
     int result;
 
-#ifdef WITH_IO
     memset(buffer, '\0', sizeof(buffer));
     buffer_index = 0;
     va_start(va, format);
-    struct KernAux_OldFile file = KernAux_OldFile_create(test_putchar);
-    result = kernaux_vfprintf(&file, (char*)data, format, va);
+    result = kernaux_vfprintf(&file, format, va);
     va_end(va);
     assert((size_t)result == strlen(expected));
     assert(strcmp(expected, buffer) == 0);
-#endif
 
     memset(buffer, '\0', sizeof(buffer));
     buffer_index = 0;
@@ -63,13 +59,10 @@ static void test(const char *const expected, const char *const format, ...)
 
 void test_main()
 {
-#ifdef WITH_IO
     memset(buffer, '\0', sizeof(buffer));
     buffer_index = 0;
-    struct KernAux_OldFile file = KernAux_OldFile_create(test_putchar);
-    kernaux_fprintf(&file, (char*)data, "Hello, World!");
+    kernaux_fprintf(&file, "Hello, World!");
     assert(strcmp("Hello, World!", buffer) == 0);
-#endif
 
     {% for case in cases %}
     {% if case.float %}
